<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DailyReportActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <AutoCompleteTextView
                    android:id="@+id/acNoAutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="17dp"
                    android:ems="10"
                    android:hint="@string/hint_acNo"
                    android:inputType="text"
                    android:text=""
                    android:textStyle="bold">
                    <requestFocus />
                </AutoCompleteTextView>

                <AutoCompleteTextView
                    android:id="@+id/FromDateAutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="17dp"
                    android:ems="10"
                    android:hint="@string/hint_acNo"
                    android:inputType="text"
                    android:text=""
                    android:textStyle="bold">
                    <requestFocus />
                </AutoCompleteTextView>

                <AutoCompleteTextView
                    android:id="@+id/toDateAutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="17dp"
                    android:ems="10"
                    android:hint="@string/hint_acNo"
                    android:inputType="text"
                    android:text=""
                    android:textStyle="bold">
                    <requestFocus />
                </AutoCompleteTextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="18">
                <!--                android:layout_marginLeft="10dp"-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/acNo"
                    android:textStyle="bold"/>
                <!--                android:layout_marginLeft="10dp"-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="@string/txnId"
                    android:textStyle="bold"/>
                <!--                android:layout_marginLeft="30dp"-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"

                    android:text="@string/dateTime"
                    android:textStyle="bold"/>
                <!--                android:layout_marginLeft="40dp"-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"

                    android:text="@string/beforeTxn"
                    android:textStyle="bold"/>
                <!--                android:layout_marginLeft="30dp"-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"

                    android:text="@string/currentTxn"
                    android:textStyle="bold"/>
                <!--                android:layout_marginLeft="30dp"-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"

                    android:text="@string/afterTxn"
                    android:textStyle="bold"/>
                <!--                android:layout_marginLeft="30dp"-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"

                    android:text="@string/sync"
                    android:textStyle="bold"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </RelativeLayout>
</layout>